feat: add new layouts and authentication middleware
- Created a new layout for default views with a header including logo and theme selector.
- Added a login layout for the login page.
- Implemented global authentication middleware to protect routes.
- Updated nuxt.config.ts to include Supabase and Turnstile modules.
- Added login page with form validation using VeeValidate and Zod.
- Created a new citations index page to display user citations.
- Added a new database types file for TypeScript type definitions.
- Removed deprecated default layout file.
- Introduced a new Sonner component for toast notifications.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,21 @@
   "eslint.useFlatConfig": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
+  },
+  // Tailwind CSS recommended settings
+  "tailwindCSS.experimental.classRegex": [
+    "tw`([^`]*)",
+    "tw\\(.*?['\"]([^)]+)['\"]\\)",
+    "class: ['\"]([^'\"]*)['\"]",
+    "className: ['\"]([^'\"]*)['\"]",
+    ":class=['\"]([^'\"]*)['\"]"
+  ],
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "tailwindCSS.includeLanguages": {
+    "vue": "html",
+    "typescript": "javascript",
+    "javascript": "javascript"
   }
 }
