--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
+    "@nuxt/scripts": "^0.11.8",
+    "@nuxtjs/supabase": "1.5.3",
+    "@nuxtjs/turnstile": "1.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.5.0",
@@ -33,6 +36,7 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.1",
     "zod": "^3.25.73"
   },
   "devDependencies": {
