--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^4.16.2",
+    "@internationalized/date": "^3.8.2",
     "@nuxt/eslint": "1.5.2",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
-    "@nuxt/scripts": "^0.11.8",
+    "@nuxt/scripts": "^0.11.9",
     "@nuxtjs/supabase": "1.5.3",
     "@nuxtjs/turnstile": "1.0.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -37,7 +38,7 @@
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.1",
-    "zod": "^3.25.73"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.2",
